--- a/src/main/resources/com/example/graphicalmessengerapp/client-login.fxml
+++ b/src/main/resources/com/example/graphicalmessengerapp/client-login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.graphicalmessengerapp.ClientLoginController">
+<AnchorPane fx:id="loginAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.graphicalmessengerapp.ClientLoginController">
    <children>
       <Button layoutX="70.0" layoutY="191.0" mnemonicParsing="false" onAction="#loginButtonPressed" prefHeight="25.0" prefWidth="68.0" text="Login" />
       <Button layoutX="152.0" layoutY="191.0" mnemonicParsing="false" onAction="#createAccountButtonPressed" text="Create Account" />
